--- a/docs/grub.texi
+++ b/docs/grub.texi
@@ -3857,6 +3857,11 @@ you forget a command, you can run the command @command{help}
 @comment * vbeinfo::                     List available video modes
 * verify_detached::             Verify detached digital signature
 * videoinfo::                   List available video modes
+@comment * xen_*::              Xen boot commands
+* xen_hypervisor::              Load xen hypervisor binary
+* xen_linux::                   Load dom0 kernel for xen hypervisor
+* xen_initrd::                  Load dom0 initrd for dom0 kernel
+* xen_xsm::                     Load xen security module for xen hypervisor
 @end menu
 
 
@@ -5119,6 +5124,39 @@ successfully.  If validation fails, it is set to a non-zero value.
 @deffn Command videoinfo [[WxH]xD]
 List available video modes. If resolution is given, show only matching modes.
 @end deffn
+
+@node xen_hypervisor
+@subsection xen_hypervisor
+
+@deffn Command xen_hypervisor file  [arguments] @dots{}
+Load a Xen hypervisor binary from @var{file}. The rest of the line is passed
+verbatim as the @dfn{kernel command-line}. Any other binaries must be
+reloaded after using this command.
+@end deffn
+
+@node xen_linux
+@subsection xen_linux
+
+@deffn Command xen_linux file [arguments]
+Load a dom0 kernel image for xen hypervisor at the booting process of xen.
+The rest of the line is passed verbatim as the module command line.
+@end deffn
+
+@node xen_initrd
+@subsection xen_initrd
+
+@deffn Command xen_initrd file
+Load a initrd image for dom0 kernel at the booting process of xen.
+@end deffn
+
+@node xen_xsm
+@subsection xen_xsm
+
+@deffn Command xen_xsm file
+Load a xen security module for xen hypervisor at the booting process of xen.
+See @uref{http://wiki.xen.org/wiki/XSM} for more detail.
+@end deffn
+
 
 @node Networking commands
 @section The list of networking commands
