--- a/docs/grub.texi
+++ b/docs/grub.texi
@@ -5669,6 +5669,16 @@ BadRAM is the ability to mark some of the RAM as ``bad''. Note: due to protocol
 limitations mips-loongson (with Linux protocol)
 and mips-qemu_mips can use only memory up to first hole.
 
+Bootlocation is ability of GRUB to automatically detect where it boots from.
+``disk'' means the detection is limited to detecting the disk with partition
+being discovered on install time. ``partition'' means that disk and partiton
+can be automatically discovered. ``file'' means that boot image file name as
+well as disk and partition can be discovered. For consistency default install ignores
+partition and relies solely on disk detection. If no bootlocation discovery is available
+or boot and grub-root disks are different, UUID is used instead. On ARC if no device
+to install to is specified, UUID is used instead as well.
+
+
 @multitable @columnfractions .20 .20 .20 .20 .20
 @item                    @tab BIOS    @tab Coreboot @tab Multiboot    @tab Qemu 
 @item video              @tab yes     @tab yes      @tab yes          @tab yes
@@ -5685,6 +5695,7 @@ and mips-qemu_mips can use only memory up to first hole.
 @item badram             @tab yes     @tab yes      @tab yes          @tab yes
 @item compression        @tab always  @tab pointless @tab no           @tab no
 @item exit               @tab yes     @tab no       @tab no           @tab no
+@item bootlocation       @tab disk    @tab no       @tab no           @tab no
 @end multitable
 
 @multitable @columnfractions .20 .20 .20 .20 .20
@@ -5703,6 +5714,7 @@ and mips-qemu_mips can use only memory up to first hole.
 @item badram             @tab yes         @tab yes       @tab no            @tab yes
 @item compression        @tab no          @tab no        @tab no            @tab no
 @item exit               @tab yes         @tab yes       @tab yes           @tab yes
+@item bootlocation       @tab file        @tab file      @tab file, ignored @tab file
 @end multitable
 
 @multitable @columnfractions .20 .20 .20 .20 .20
@@ -5721,24 +5733,26 @@ and mips-qemu_mips can use only memory up to first hole.
 @item badram             @tab yes (*)     @tab no      @tab no      @tab no
 @item compression        @tab configurable @tab no     @tab no      @tab configurable
 @item exit               @tab no          @tab yes     @tab yes     @tab yes
+@item bootlocation       @tab no          @tab partition @tab file  @tab file (*)
 @end multitable
 
 @multitable @columnfractions .20 .20 .20 .20 .20
-@item                    @tab MIPS qemu @tab emu
-@item video              @tab no        @tab yes
-@item console charset    @tab CP437     @tab Unicode (*)
-@item network            @tab no        @tab yes
-@item ATA/AHCI           @tab yes       @tab no
-@item AT keyboard        @tab yes       @tab no
-@item Speaker            @tab no        @tab no
-@item USB                @tab N/A       @tab yes
-@item chainloader        @tab yes       @tab no
-@item cpuid              @tab no        @tab no
-@item hints              @tab guess     @tab no
-@item PCI                @tab no        @tab no
-@item badram             @tab yes (*)   @tab no
-@item compression        @tab configurable @tab no
-@item exit               @tab no        @tab yes
+@item                    @tab MIPS qemu @tab emu         @tab xen
+@item video              @tab no        @tab yes         @tab no
+@item console charset    @tab CP437     @tab Unicode (*) @tab ASCII
+@item network            @tab no        @tab yes         @tab no
+@item ATA/AHCI           @tab yes       @tab no          @tab no
+@item AT keyboard        @tab yes       @tab no          @tab no
+@item Speaker            @tab no        @tab no          @tab no
+@item USB                @tab N/A       @tab yes         @tab no
+@item chainloader        @tab yes       @tab no          @tab yes
+@item cpuid              @tab no        @tab no          @tab yes
+@item hints              @tab guess     @tab no          @tab no
+@item PCI                @tab no        @tab no          @tab no
+@item badram             @tab yes (*)   @tab no          @tab no
+@item compression        @tab configurable @tab no       @tab no
+@item exit               @tab no        @tab yes         @tab no
+@item bootlocation       @tab no        @tab file        @tab no
 @end multitable
 
 @node Platform-specific operations
