--- a/NEWS
+++ b/NEWS
@@ -59,6 +59,7 @@ New in 2.02:
   * Command for inspecting coreboot tables (`lscoreboot').
   * New target default_payload.elf.
   * Increased maximal core size.
+  * Prefer pmtimer for TSC calibration.
 
 * New/improved platform support:
   * New `efifwsetup' and `lsefi' commands on EFI platforms.
@@ -89,6 +90,12 @@ New in 2.02:
   * New platform `none' which builds only user level utilities. This is now
     default if target CPU is not supported.
   * Support for booting little-endian Linux kernel on powerpc.
+  * Support network boot with Oracle sun4v vnet devices.
+  * Added SAS disks to the IEEE 1275 Open Firmware device list.
+  * Try multiple methods for TSC (timestamp counter) calibration - PIT, pmtimer,
+    EFI Stall. If everything fails, use hardcoded frequency 800MHz.
+  * Support Hyper-V Gen2 platforms which lack PIT for TSC calibration.
+  * Map UEFI Persistent Memory to E820 persistent memory.
 
 * Security:
   * Add optional facility to enforce that all files read by the core image
@@ -152,6 +159,7 @@ New in 2.02:
     system.
   * emu libusb support removed (was broken and unmaintained).
   * powerpc64le compile support.
+  * Use fixed timestamp when generating GRUB image for reproducible builds.
 
 * Revision control moved to git.
 
